emperia/minikube/emperia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emperia-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: emperia
  type: LoadBalancer
